cduce/tests/full/bad/no_url_loader.t/no_url_loader.cd
let _ = load_file "https://www.cduce.org"
